modules/gdscript/tests/scripts/parser/errors/struct_keyword_reserved.gd
func test():
	# This should fail: "struct" is now a reserved keyword
	var struct = "test"
	print(struct)
